Add more features